// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`loop instruction compiler > compiles a smaller resolved cap 1`] = `
{
  "blockStack": [
    {
      "blockType": 0,
      "expectedResultTypes": [],
    },
    {
      "blockType": 1,
      "expectedResultTypes": [],
      "loopCounterLocal": {
        "index": 0,
        "isInteger": true,
      },
    },
  ],
  "byteCode": [
    65,
    0,
    33,
    0,
    2,
    64,
    3,
    64,
    32,
    0,
    65,
    10,
    78,
    4,
    64,
    12,
    2,
    11,
    32,
    0,
    65,
    1,
    106,
    33,
    0,
  ],
  "locals": {
    "__infiniteLoopProtectionCounter2": {
      "index": 0,
      "isInteger": true,
    },
  },
}
`;

exports[`loop instruction compiler > compiles the loop segment with default cap 1`] = `
{
  "blockStack": [
    {
      "blockType": 0,
      "expectedResultTypes": [],
    },
    {
      "blockType": 1,
      "expectedResultTypes": [],
      "loopCounterLocal": {
        "index": 0,
        "isInteger": true,
      },
    },
  ],
  "byteCode": [
    65,
    0,
    33,
    0,
    2,
    64,
    3,
    64,
    32,
    0,
    65,
    232,
    7,
    78,
    4,
    64,
    12,
    2,
    11,
    32,
    0,
    65,
    1,
    106,
    33,
    0,
  ],
  "locals": {
    "__infiniteLoopProtectionCounter2": {
      "index": 0,
      "isInteger": true,
    },
  },
}
`;

exports[`loop instruction compiler > compiles the loop segment with explicit cap argument 1`] = `
{
  "blockStack": [
    {
      "blockType": 0,
      "expectedResultTypes": [],
    },
    {
      "blockType": 1,
      "expectedResultTypes": [],
      "loopCounterLocal": {
        "index": 0,
        "isInteger": true,
      },
    },
  ],
  "byteCode": [
    65,
    0,
    33,
    0,
    2,
    64,
    3,
    64,
    32,
    0,
    65,
    32,
    78,
    4,
    64,
    12,
    2,
    11,
    32,
    0,
    65,
    1,
    106,
    33,
    0,
  ],
  "locals": {
    "__infiniteLoopProtectionCounter2": {
      "index": 0,
      "isInteger": true,
    },
  },
}
`;
